--- a/.bazelrc
+++ b/.bazelrc
@@ -1,8 +1,10 @@
 # Allow DOCKER_HOST env to leak into test actions. 
 test --test_env=DOCKER_HOST
 
-# TODO: --stamp flag  
-build:stamp --workspace_status_command=private/stamp.bash
+# Stamp 
+build --workspace_status_command=private/stamp.bash
+run --workspace_status_command=private/stamp.bash
+test --workspace_status_command=private/stamp.bash
 
 # Allow external dependencies to be retried. debian snapshot is unreliable and needs retries.
 common --experimental_repository_downloader_retries=20
