--- a/.cloudbuild/cloudbuild.yaml
+++ b/.cloudbuild/cloudbuild.yaml
@@ -12,7 +12,7 @@ artifacts:
 steps:
   - name: gcr.io/cloud-builders/bazel@sha256:e82204cf0715edb80e4957fa55f944b9dd06b0b1c4eb4b0ca0022de7839726f6
     env:
-      - PROJECT_ID=${PROJECT_ID}
+      - PROJECT_ID=${PROJECT_ID}/testing
       - COMMIT_SHA=${COMMIT_SHA}
       - REGISTRY=gcr.io
       - REMOTE_CACHE_GCS=${_REMOTE_CACHE_GCS_}
@@ -22,7 +22,7 @@ steps:
     
   - name: docker
     env:
-    - PROJECT_ID=${PROJECT_ID}
+    - PROJECT_ID=${PROJECT_ID}/testing
     - COMMIT_SHA=${COMMIT_SHA}
     - REGISTRY=gcr.io
     entrypoint: ./cloudbuild_docker.sh
@@ -32,7 +32,7 @@ steps:
 
   - name: gcr.io/projectsigstore/cosign:v1.13.1@sha256:fd5b09be23ef1027e1bdd490ce78dcc65d2b15902e1f4ba8e04f3b4019cc1057
     env:
-    - PROJECT_ID=${PROJECT_ID}
+    - PROJECT_ID=${PROJECT_ID}/testing
     - COMMIT_SHA=${COMMIT_SHA}
     - REGISTRY=gcr.io
     # Workaround for: https://github.com/GoogleContainerTools/distroless/issues/914
@@ -45,7 +45,7 @@ steps:
 
   - name: gcr.io/projectsigstore/cosign:v1.13.1@sha256:fd5b09be23ef1027e1bdd490ce78dcc65d2b15902e1f4ba8e04f3b4019cc1057
     env:
-    - PROJECT_ID=${PROJECT_ID}
+    - PROJECT_ID=${PROJECT_ID}/testing
     - COMMIT_SHA=${COMMIT_SHA}
     - REGISTRY=gcr.io
     # Workaround for: https://github.com/GoogleContainerTools/distroless/issues/914
